kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - image: alex662/django_app:6.0
          command: ["gunicorn", "webapp.wsgi:application", "--bind", "0.0.0.0:8000"]
          name: django-app
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: static-files
              mountPath: /static
        - image: nginx:latest
          name: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/
            - name: static-files
              mountPath: /static
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: static-files
          emptyDir: {}
