kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  labels:
    env: dev
    owner: Alex
spec:
  selector:
    app: django-app
  ports:
    - name: django-app
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
